fix is valid path functions

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -8,6 +8,9 @@
     "moduleResolution": "node10",
     "types": ["node"],
 
+    /* Emit */
+    "importHelpers": true,
+
     /* Interop Constraints */
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
