--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,7 +11,9 @@
     "fs-extra": "^11.2.0",
     "radash": "^12.1.0",
     "semver": "^7.6.3",
+    "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
     "yargs": "^17.7.2"
   }
 }
