add versionGenerator command

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ccc-games-template",
   "uuid": "b9d04efc-d729-47cb-85db-53d7f66d3478",
+  "license": "MIT",
   "creator": {
     "version": "3.8.3"
+  },
+  "scripts": {
+    "versionGenerate": "yarn --cwd ./scripts versionGenerate"
   }
 }
