--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "version": "3.8.3"
   },
   "scripts": {
-    "versionGenerate": "yarn --cwd ./scripts versionGenerate"
+    "manifestGenerate": "yarn --cwd ./scripts manifestGenerate"
   }
 }
