--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,22 +1,25 @@
 {
   "name": "scripts",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
-    "versionGenerate": "ts-node versionGenerator.ts"
+    "build": "node ./esbuild.config.js",
+    "manifestGenerate": "node ./dist/manifestGenerate.cjs"
+  },
+  "dependencies": {
+    "fs-extra": "^11.2.0",
+    "radash": "^12.1.0",
+    "semver": "^7.6.3",
+    "tslib": "^2.8.1",
+    "yargs": "15.4.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.10.2",
     "@types/semver": "^7.5.8",
     "@types/yargs": "^17.0.33",
-    "fs-extra": "^11.2.0",
-    "radash": "^12.1.0",
-    "semver": "^7.6.3",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.7.2",
-    "yargs": "^17.7.2"
+    "esbuild": "^0.24.2",
+    "typescript": "^5.7.2"
   }
 }
