--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,25 +1,22 @@
 {
   "compilerOptions": {
-    /* Language and Environment */
     "target": "ES2017",
-
-    /* Modules */
     "module": "CommonJS",
-    "moduleResolution": "node10",
-    "types": ["node"],
-
-    /* Emit */
-    "importHelpers": true,
-
-    /* Interop Constraints */
-    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-
-    /* Type Checking */
+    "skipLibCheck": true,
     "strict": true,
-
-    /* Completeness */
-    "skipLibCheck": true
-  }
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "useDefineForClassFields": true,
+    "isolatedModules": true,
+    "importHelpers": true,
+    "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["src/**/*.ts", "src/**/*.d.ts"]
 }
