--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
   },
   "scripts": {
     "manifestGenerate": "yarn --cwd ./scripts manifestGenerate"
+  },
+  "dependencies": {
+    "crypto-js": "^4.2.0",
+    "semver": "^7.6.3"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/semver": "^7.5.8"
   }
 }
