WIP: add HotUpdate script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "protobufjs": "^7.4.0",
+    "radash": "^12.1.0",
     "semver": "^7.6.3"
   },
   "devDependencies": {
